# mcp-gsuite

./: .env.example  .gitignore  README.md  mcp-gsuite.code-workspace  pyproject.toml  test_gmail_service.py
.roo/: mcp.json
.roo/rules/: testing.md
docs/: FastMCP 2.10 docs.md  FastMCP_docs.txt  MCP_llms.txt
src/mcp_gsuite/: __init__.py  __main__.py  auth_utils.py  calendar.py  calendar_tools.py  gauth.py  gmail.py  gmail_tools.py  logs.py  mcp.py  server.py  tools_calendar.py  tools_gmail.py
src/mcp_gsuite/api/: calendar.py  gmail.py
src/mcp_gsuite/tests/: test_tools.py
src/mcp_gsuite/utils/: docs.json  update_docs.py
tests/: test_tools.py
