[project]
name = "mcp-gsuite"
version = "0.4.1"
description = "MCP Server to connect to Google G-Suite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "beautifulsoup4>=4.12.3",
 "fastmcp>=2.10.3",
 "google-api-python-client>=2.154.0",
 "httplib2>=0.22.0",
 "oauth2client==4.1.3",
 "python-dotenv>=1.0.1",
 "pytz>=2024.2",
 "requests>=2.32.3",
]
[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
mcp-gsuite-dev = "mcp_gsuite.__main__:main"
mcp-gsuite = "mcp_gsuite.__main__:main"
mcp-gsuite-docs = "mcp_gsuite.utils.update_docs:update_dev_docs"

[tool.pytest.ini_options]
pythonpath = ["src"]

[pytest]
required_plugins=["asyncio"]

[tool.ruff]  # See https://docs.astral.sh/ruff/configuration/
exclude = [
    ".venv",
    "*.md"
]
[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top of file
    "E501",  # Line too long
    "F821",  # Undefined name
]
[tool.ruff.format]
quote-style = "double"